# kubecon-eu-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  release-please-config.json  server.json
.github/: FUNDING.yml
.github/workflows/: publish-pypi.yml  release-please.yml  test-uvx-install.yml
src/kubecon_eu_mcp/: data_service.py  models.py  static_data.py
tests/: conftest.py  test_server.py
